# moltlang

./: .gitignore  .mcp.json  2026-02-03-Similar-Projects.md  2026-02-04-BETA-DEPLOYMENT-STRATEGY.md  2026-02-04-MARKETING-STRATEGY.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  FINAL_TEST_REPORT.md  HAIKU_SESSION_INSTRUCTIONS.md  MCP_FIX_SUMMARY.md  MOLTBOOK_DEMO_POST.md  MOLTBOOK_RECRUITMENT_POST.md  NAMING_CONTEST_ISSUE.md  NEXT_STEPS.txt  OPENCLAW_SKILL_SUBMISSION.md  README.md  SKILL.md  TESTING_GUIDE.md  VERIFY_FIX.py  cross-agent-handoff.json  moltlang_handoff.json  nixpacks.toml  pyproject.toml  requirements.txt
.claude/: current-model.json  settings.json
.claude/byterover/knowledge/apis/: 20260204-034455-openclaw-ai-agent-skills-marketplace-submit.md  (+1 more)
.claude/plans/: 2026-02-03-PLAN-incomplete.md  2026-02-03-PLAN-mcp-server-testing-improved.md  2026-02-03-PLAN-molt-mcp-cli-config.md  2026-02-03-PLAN-molt-mcp-tools-fix.md  2026-02-03-PLAN-moltlang-mcp-fix.md  2026-02-03-PLAN-moltlang-token-ordering-fix.md  2026-02-03-PLAN-moltlang-weak-llm-robustness.md  2026-02-03-PLAN-semantic-grouping-token-ordering.md  2026-02-04-PLAN-incomplete.md
.github/: FUNDING.yml
.github/workflows/: lint.yml  release.yml  test.yml
docs/: AI_ONBOARDING_STRATEGY.md  API.md  ARCHITECTURE.md  QUICKSTART.md  SPEC.md  TUTORIAL.md  WEBHOOK_HELPER_BOT_PLAN.md
examples/: basic_usage.py  mcp_integration.py  openclaw_demo.py  test_starter_template.py
mcp-server/: .env.example  Dockerfile  LICENSE  README.md  moltlang-mcp-server-0.1.0.tgz  moltlang-test-suite.cjs  nixpacks.toml  package-lock.json  package.json  tsconfig.json
mcp-server/src/: bridge.ts  http-server.ts  index.ts  tools.ts
mcp-server/src/handlers/: translate.ts
mcp-server/src/utils/: bot-registry.ts  cache.ts  logger.ts  python.ts
moltlang-skill/: skill.md
skills/: _meta.json
skills/moltlang/: README.md  skill-simple.md  skill.json  skill.md
src/mcp_server/: __init__.py  endpoints.py  server.py
src/moltlang/: __init__.py  cli.py  config.py  tokens.py  translator.py  validator.py
src/moltlang/openclaw/: __init__.py  skill.py
src/moltlang/training/: __init__.py  data_gen.py  distill.py
tests/: inter_model_communication.py  test_mcp.py  test_translator.py  test_validator.py  test_weak_llm_robustness.py
(+1 files in other folders)
